@@ -192,7 +192,7 @@ extern u8 *memory_regions[16];
 extern u32 memory_limits[16];
 
 /* EDIT: Shouldn't this be extern ?! */
-extern u32 waitstate_cycles_sequential[16][3];
+extern const u32 waitstate_cycles_sequential[16][3];
 
 extern u32 gamepak_size;
 
